almost done with problem 1

--- a/Assignment1/MandatoryAssign_1_markdown.Rmd
+++ b/Assignment1/MandatoryAssign_1_markdown.Rmd
@@ -105,7 +105,7 @@ summary(model2)
  
 ## d) 
 
-Continuing to remove all explanatory variables untill all P-values are less than $0.05$. What is the final model?
+Continuing to remove all explanatory variables until all P-values are less than $0.05$. What is the final model?
 Make different plots in order to evaluate whether the model is reasonable.
 
 ```{r}
@@ -145,66 +145,91 @@ summary(filtermodel)
 ```
 
 
+```{r}
+plot(filtermodel)
+```
+Residuals vs Fitted
+
+
+Normal Q-Q plot indicates some datapoints as outliers for a normally distributed assumption.
+
+Scale Location plot shows that the variance of the residuals are somewhat constant, however with an increase towards higher fitted values.
+
+Residuals vs Leverage plot shows very horizontal trend, although with two datapoints exhibiting high leverage.
+
+
 
 ```{r}
 # Making plots of the final model from forward selection with the criteria of p values < 0.05 
 library(ggplot2)
+y.hat <- predict(filtermodel, nuclear)
+y.2 <- predict(model2, nuclear)
+y <- log(nuclear$cost)
 
-predicted_cost <- data.frame(predict(model2, nuclear))
-predicted_cost_p <- data.frame(predict(filtermodel, nuclear))
 
-names(predicted_cost)
-
-nuclear
-
-colors <- c("c1" = "blue", "c2" = "red" , "c3" = "purple")
-shapes <- c("sh1" = 10, "sh2" = 10 , "sh3" = 10 )
-
-plot <- ggplot(data=nuclear, aes(x = cap))+
-  geom_point(data=nuclear,
-             aes(y=cost,
-                 color="c1",
-                 shape="sh1")) +
-  geom_point(data=predicted_cost,
-             aes(y=names(predicted_cost),
-                 color="c2",
-                 shape="sh2")) +
-  geom_point(data=predicted_cost_p,
-             aes(y=names(predicted_cost_p),
-                 color="c3",
-                 shape="sh3"))
-plot
+plot(y,y.hat)
+plot(y,y.2)
   
 ```
 
-```{r}
-# Change in
-```
 
 ## e) Model based on quadratic error
 
 Use the final model to predict response and make a model based on the average quadratic error $(\frac{1}{n} \sum_{i=1}^n(y_i-\hat{y_i})^2)$ in order to evaluate how good the model is. Discuss weaknesses with such a procedure. 
 
+```{r}
+y.hat <- predict(filtermodel, nuclear)
+y <- log(nuclear$cost)
+
+MSE <- sum((y-y.hat)^2)/length(y)
+MSE
+```
+Evaluating the model with the average quadratic error we get on average a squared difference of $0.026$. But this does not tell us everything about the model. Additionally, computing the $R^2$ metric gives us a indication of how the variance in the data is transferred to the model. 
+
+```{r}
+R2 <- 1- sum((y-y.hat)^2)/sum((y-mean(y))^2)
+R2
+# Or:
+var(y.hat)/var(y)
+```
+With a $R^2$ of $0.809$ which tells us that the model explains $80.9%$ of the variance in data.
 
 
 Assume now we want to predict $cost$ for a new data point. More specifically we are interested in $\theta = \mathbb{E}[Y|\mathbf{x^*}]$ as well as $\eta = \mathbb{E}[\text{exp}(Y)|\mathbf{x^*}]$ where $\mathbf*$ is defined by the $d.new$ data point in the code below.
 
-```{r}
-d.new = data.frame(data=70.0, t1=13, t2=50, cap=800, pr=1, ne=0, ct=0, bw=1, cum.n=8, pt=1)
-
-d.new
-
-predict(filtermodel, d.new, interval="confidence")
-predict(filtermodel, d.new, interval="predict")
-
-```
 
 ## f) Differences between confidence and predict commands
 Run the two commands. Discuss the differences between the two predict commands.
+```{r}
+
+d.new <- data.frame(date=70.0, t1=13, t2=50, cap=800, pr=1, ne=0, ct=0, bw=1, cum.n=8, pt=1)
+
+interval.conf <- predict(filtermodel, d.new, interval="confidence")
+interval.pred <-predict(filtermodel, d.new, interval="predict")
+
+interval.conf
+interval.pred
+
+```
+For both the interval choices, the fit is the same. However the confidence intervals upper and lower bounds are narrower than the prediction. 
+
+The confidence interval portrays the uncertainty regarding the mean of the prediction values, and as $\mathbb{E}[\epsilon]=0$, the random, gaussian noise gets omitted from the calculations. The prediction interval however portrays the uncertainty of a single, predicted point. Therefore it takes into account the random noise $\epsilon$.
 
 
 ## g) Constructing log intervals on non-logarithmic scale
 The intervals given in the previous point is related to $cost$ on log-scale. Try to construct intervals for $cost$ on the original scale.
+
+```{r}
+
+
+
+ggplot(data=d.new, aes(,y)) +
+  geom_point() + 
+  geom_errorbar(aes(ymin = interval.conf[2], ymax = interval.conf[3]))
+
+exp(interval.conf)
+
+```
 
 
 
@@ -216,7 +241,35 @@ If you use cross-validation for selection of the penalty parameter, which variab
 
 Also compare this with the model you obtained earlier.
 
-Hint: Loook at the Hitters_lasso.R script.
+Hint: Look at the Hitters_lasso.R script.
+
+```{r}
+nuclear[ ,-1 ]
+```
+
+
+
+
+```{r}
+# Lasso regression
+#library(glmnet)
+
+grid <- 10^seq(5, -2, length=100)
+
+x <- nuclear[ ,-1]
+y <- nuclear[ , 1]
+
+
+lasso.model <- glmnet(x,y, alpha=1, lambda=grid)
+
+#Plotting estimates for different values of lambda
+plot(lasso.model, xvar="lambda")
+
+
+
+
+
+```
 
 
 # Problem 2.
